fix overlapping logo with banner

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -368,7 +368,7 @@ Shortcode Content
     padding: 0px;
     position: absolute;
     top: 0;
-    left: -300px;
+    left: -50px;
 }
 
 .navbar-default .navbar-nav > li {
